# cmake-examples

01-basic/: README.adoc  usage.md
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: CMakeLists.txt
01-basic/H-third-party-library/: CMakeLists.txt
02-sub-projects/A-basic/subbinary/: CMakeLists.txt
02-sub-projects/A-basic/sublibrary2/: CMakeLists.txt
03-code-generation/protobuf/: CMakeLists.txt
04-static-analysis/clang-analyzer/: CMakeLists.txt
04-static-analysis/clang-analyzer/subproject2/: #main2.cpp#
05-unit-testing/boost/: unit_tests.cpp
05-unit-testing/google-test-download/: unit_tests.cpp
06-installer/deb/: CMakeLists.txt
